# ipget

./: .dockerignore  .env.test.example.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.txt  Pipfile  README.md  cspell.config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  setup-test-env.sh
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yml  dependabot-labels.yml  docker-build-publish.yml  pull-request-checks.yml  python-lint.yml  python-tests.yml  release-drafter.yml
docs/: example-compose.yaml  mysql-example-compose.yaml  sqlite-example-compose.yaml
docs/example-test-dotenv/: test-mysql.env  test-postgres.env  test-sqlite-file.env  test-sqlite-memory.env
src/: app.py
src/ipget/: alchemy.py  environment.py  errors.py  healthchecks.py  helpers.py  ipget.py  notifications.py  settings.py
tests/: conftest.py  custom_strategies.py  test_alchemy.py  test_healthchecks.py  test_helpers.py  test_notifications.py  test_settings.py
