[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["src/", "tests/"]

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]
xfail_strict = true
markers = ["no_test_env"]

[tool.coverage.run]
source = ["src/ipget"]

[tool.poetry]
name = "ipget"
version = "0.8.1"
description = "Gets public ip and writes to a database. Optionally notifies on change, and pings healthchecks.io."
authors = ["Andrew Kinsman <69199502+LunaPurpleSunshine@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2"
pymysql = "*"
discord-webhook = "*"
requests = "*"
pg8000 = "*"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
rope = "*"
black = "*"
ruff = ">=0.0.250"
pytest = "*"
isort = "*"
pytest-cov = "*"
pre-commit = "*"
pytest-md = "*"
pytest-emoji = "*"
python-dotenv = "^1.0.0"
hypothesis = "^6.87.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
