[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]
xfail_strict = true
markers = ["no_test_env"]

[tool.coverage.run]
source = ["src/ipget"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "RUF", "TID252"]

[tool.poetry]
name = "ipget"
version = "0.8.1"
description = "Gets public ip and writes to a database. Optionally notifies on change, and pings healthchecks.io."
authors = ["Andrew Kinsman <69199502+LunaPurpleSunshine@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2"
pymysql = "*"
discord-webhook = "*"
requests = "*"
pg8000 = "*"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
rope = "*"
ruff = ">=0.0.250"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
pytest-md = "*"
pytest-emoji = "*"
python-dotenv = "^1.0.0"
hypothesis = "^6.92.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
